--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,28 @@
 adapt==0.4.4
 altair==4.2.2
 Bgolearn==2.0.0
-catboost==1.2
+catboost==1.1  # 降级到兼容版本
 graphviz==0.20.1
-matplotlib==3.6.3
-numpy==1.25
-pandas==1.5.3
-Pillow==9.5.0
-PyYAML==6.0
-requests==2.31.0
-scikit_learn==1.2.2
-seaborn==0.12.2
-shap==0.43.0
-streamlit
+matplotlib>=3.5.0,<3.7.0  # 放宽版本范围，兼容numpy
+numpy>=1.26.0,<1.27.0  # 修改为TensorFlow推荐版本范围
+pandas>=1.5.0,<1.6.0  # 保持与其他依赖兼容
+Pillow>=9.4.0,<10.0.0
+PyYAML>=5.4.0,<6.1  # 降级可能引起构建失败的版本
+requests>=2.30.0,<3.0.0
+scikit_learn>=1.2.0,<1.3.0
+seaborn>=0.11.2,<0.13.0
+shap>=0.41.0,<0.44.0  # 保持与xgboost兼容
+streamlit>=1.18.0,<2.0.0
 streamlit_analytics==0.4.1
-streamlit_extras==0.2.7
-streamlit_option_menu==0.3.2
-streamlit_shap==1.0.2
-xgboost==1.7.4
+streamlit_extras>=0.2.5,<0.3.0
+streamlit_option_menu>=0.3.0,<0.4.0
+streamlit_shap>=0.8.0,<1.1.0  # 降低版本以减少冲突
+xgboost>=1.7.0,<1.8.0
 sko==0.5.7
-SciencePlots==2.1.0
-prettytable==3.8.0
-tabulate==0.9.0
-pymoo==0.6.0.1
-matminer==0.9.0
-bayesian-optimization==1.4.3
-pymatgen==2023.12.18
+SciencePlots>=1.0.0,<2.2.0
+prettytable>=3.7.0,<3.9.0
+tabulate>=0.8.9,<0.10.0
+pymoo>=0.6.0,<0.7.0
+matminer>=0.8.0,<0.10.0
+bayesian-optimization>=1.3.0,<1.5.0
+pymatgen>=2023.9.0,<2023.12.20
