--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,24 @@
 adapt==0.4.4
-altair==4.2.2
-Bgolearn==2.0.0
-catboost==1.1  # 降级到兼容版本
-graphviz==0.20.1
-matplotlib>=3.5.0,<3.7.0  # 放宽版本范围，兼容numpy
-numpy>=1.26.0,<1.27.0  # 修改为TensorFlow推荐版本范围
-pandas>=1.5.0,<1.6.0  # 保持与其他依赖兼容
+altair>=4.2.0,<4.3.0
+Bgolearn>=2.0.0,<2.1.0
+catboost>=1.2,<1.3
+graphviz>=0.20.0,<0.21.0
+matplotlib>=3.5.0,<3.7.0
+numpy>=1.26.0,<1.27.0
+pandas>=1.5.0,<1.6.0
 Pillow>=9.4.0,<10.0.0
-PyYAML>=5.4.0,<6.1  # 降级可能引起构建失败的版本
+PyYAML>=5.4.0,<6.1.0
 requests>=2.30.0,<3.0.0
 scikit_learn>=1.2.0,<1.3.0
 seaborn>=0.11.2,<0.13.0
-shap>=0.41.0,<0.44.0  # 保持与xgboost兼容
+shap>=0.41.0,<0.44.0
 streamlit>=1.18.0,<2.0.0
-streamlit_analytics==0.4.1
+streamlit_analytics>=0.4.0,<0.5.0
 streamlit_extras>=0.2.5,<0.3.0
 streamlit_option_menu>=0.3.0,<0.4.0
-streamlit_shap>=0.8.0,<1.1.0  # 降低版本以减少冲突
+streamlit_shap>=0.8.0,<1.1.0
 xgboost>=1.7.0,<1.8.0
-sko==0.5.7
+sko>=0.5.7,<0.6.0
 SciencePlots>=1.0.0,<2.2.0
 prettytable>=3.7.0,<3.9.0
 tabulate>=0.8.9,<0.10.0
@@ -26,3 +26,4 @@ pymoo>=0.6.0,<0.7.0
 matminer>=0.8.0,<0.10.0
 bayesian-optimization>=1.3.0,<1.5.0
 pymatgen>=2023.9.0,<2023.12.20
+
